Solved blank entry and white space issues

--- a/src/App.css
+++ b/src/App.css
@@ -137,3 +137,9 @@ select {
   transform: scale(1.5);
 }
 */
+.errorText{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: red;
+}
